--- a/DesignAssignment2/index.html
+++ b/DesignAssignment2/index.html
@@ -18,7 +18,7 @@
             <div class="header-top">
                 <div class="container clearfix">
                     <div class="header-top-left">
-                        <img src="images/Logo.png" alt="">
+                        <img src="./images/Logo.png" alt="">
                     </div>
                     <div class="header-top-right">
                         <ul>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="arrow"><img src="images/arrow.png" alt=""></div>
+                <div class="arrow"><img src="./images/arrow.png" alt=""></div>
             </div>
 
         </div>
@@ -66,7 +66,7 @@
                     <div class="main-heading">
                         <h2>PROJECT SLIDESHOW</h2>
                         <div class="main-paragraph">
-                            <img src="/images/Image-slider-indicator.png" alt="">
+                            <img src="./images/Image-slider-indicator.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="main-heading">
                             <h2>BLOG/PAGE slideshow</h2>
                             <div class="main-paragraph">
-                                <img src="/images/Image-slider-indicator.png" />
+                                <img src="./images/Image-slider-indicator.png" />
                             </div>
                         </div>
                     </div>
@@ -84,23 +84,23 @@
                             <div class="main-heading">
                                 <h2>SIDEBAR slideshow</h2>
                                 <div class="main-paragraph">
-                                    <img src="/images/Image-slider-indicator.png" />
+                                    <img src="./images/Image-slider-indicator.png" />
                                 </div>
                             </div>
                         </div>
                         <div class="col2-bottom clearfix">
                             <h2>SIDEBAR GALLARY</h2>
                             <ul>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
                             </ul>
                             <ul>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
                             </ul>
                             <ul>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
-                                <li><img src="/images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
+                                <li><img src="./images/sidebar-gallary-image.png" /></li>
                             </ul>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
             </div>
             <div class="container">
                 <div class="separator clearfix">
-                    <div class="separator-image"><img src="images/separator.png" /></div>
+                    <div class="separator-image"><img src="./images/separator.png" /></div>
                 </div>
             </div>
 
@@ -367,78 +367,78 @@
             <div class="container">
                 <div class="headlinethird clearfix">
                     <div class="headlinethird-left"></div>
-                        <div class="headlinefirst-1">
-                            <div class="headlinefirst-1"></div>
-                            <h2>Headine</h2>
-                            <p>njkdsnbsjksdvbsdvsdjkbvjbsdoubwdsnvsdvb sdvnsdkjnkoidbv xjsodbvdsjv sdovwd
-                                jdlsnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnvbkbjsddddddddddddd jdbvkssssssssssssssss sdkdbvs
-                                vbjdskbvvvb
-                                jbksvdddddbjksvvvvv
-                                bjkjsddvvvvvvvvvvvvvvvvvvvvvvvv
-                                jbksdvvvvvvvvvvvvvvvvvvvvvvvvv
-                                svdbjjjjjjjjjjjjj
-                            </p>
-                        </div>
+                    <div class="headlinefirst-1">
+                        <div class="headlinefirst-1"></div>
+                        <h2>Headine</h2>
+                        <p>njkdsnbsjksdvbsdvsdjkbvjbsdoubwdsnvsdvb sdvnsdkjnkoidbv xjsodbvdsjv sdovwd
+                            jdlsnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnvbkbjsddddddddddddd jdbvkssssssssssssssss sdkdbvs
+                            vbjdskbvvvb
+                            jbksvdddddbjksvvvvv
+                            bjkjsddvvvvvvvvvvvvvvvvvvvvvvvv
+                            jbksdvvvvvvvvvvvvvvvvvvvvvvvvv
+                            svdbjjjjjjjjjjjjj
+                        </p>
                     </div>
-                    <div class="headlinethird-right">
-                        <div class="headlinefirst-1">
-                            <div class="headlinefirst-1"></div>
-                            <h2>Headine</h2>
-                            <p>njkdsnbsjksdvbsdvsdjkbvjbsdoubwdsnvsdvb sdvnsdkjnkoidbv xjsodbvdsjv sdovwd
-                                jdlsnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnvbkbjsddddddddddddd jdbvkssssssssssssssss sdkdbvs
-                                vbjdskbvvvb
-                                jbksvdddddbjksvvvvv
-                                bjkjsddvvvvvvvvvvvvvvvvvvvvvvvv
-                                j bksdvvvvvvvvvvvvvvvvvvvvvvvvv
-                                svdbjjjjjjjjjjjjj
-                            </p>
-                        </div>
-                    </div>
-
                 </div>
-
+                <div class="headlinethird-right">
+                    <div class="headlinefirst-1">
+                        <div class="headlinefirst-1"></div>
+                        <h2>Headine</h2>
+                        <p>njkdsnbsjksdvbsdvsdjkbvjbsdoubwdsnvsdvb sdvnsdkjnkoidbv xjsodbvdsjv sdovwd
+                            jdlsnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnvbkbjsddddddddddddd jdbvkssssssssssssssss sdkdbvs
+                            vbjdskbvvvb
+                            jbksvdddddbjksvvvvv
+                            bjkjsddvvvvvvvvvvvvvvvvvvvvvvvv
+                            j bksdvvvvvvvvvvvvvvvvvvvvvvvvv
+                            svdbjjjjjjjjjjjjj
+                        </p>
+                    </div>
+                </div>
 
             </div>
-            <div class="container">
-                <div class="headlinefourth clearfix">
-                    <div class="headlinefourth-4-1">
-                        <div class="headline">
-                            <h2>Headline</h2>
-                        </div>
-                        <div class="paragraph">
-                            vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss </div>
-                    </div>
-                    <div class="headlinefourth-4-2">
-                        <div class="headline">
-                            <h2>Headline</h2>
-                        </div>
-                        <div class="paragraph">
-                            vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                        </div>
 
+
+        </div>
+        <div class="container">
+            <div class="headlinefourth clearfix">
+                <div class="headlinefourth-4-1">
+                    <div class="headline">
+                        <h2>Headline</h2>
                     </div>
-                    <div class="headlinefourth-4-3">
-                        <div class="headline">
-                            <h2>Headline</h2>
-                        </div>
-                        <div class="paragraph"></div>
-                        vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                        sdvobbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-                        sdjbvkkkkkkkkkkk
-                    </div>
+                    <div class="paragraph">
+                        vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss </div>
                 </div>
-                <div class="headlinefourth-4-4">
+                <div class="headlinefourth-4-2">
                     <div class="headline">
                         <h2>Headline</h2>
                     </div>
                     <div class="paragraph">
                         vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                        sdvobbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-                        sdjbvkkkkkkkkkkk
                     </div>
+
+                </div>
+                <div class="headlinefourth-4-3">
+                    <div class="headline">
+                        <h2>Headline</h2>
+                    </div>
+                    <div class="paragraph"></div>
+                    vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                    sdvobbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+                    sdjbvkkkkkkkkkkk
+                </div>
+            </div>
+            <div class="headlinefourth-4-4">
+                <div class="headline">
+                    <h2>Headline</h2>
+                </div>
+                <div class="paragraph">
+                    vhbvjsdjobuvbsdvodwuodvssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                    sdvobbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+                    sdjbvkkkkkkkkkkk
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
@@ -493,7 +493,7 @@
             </div> -->
     <div class="container">
         <div class="separator clearfix">
-            <div class="separator-image"><img src="images/separator.png" /></div>
+            <div class="separator-image"><img src="./images/separator.png" /></div>
         </div>
     </div>
 
@@ -636,7 +636,7 @@
                 <div class="col4-main clearfix">
                     <div class="col4-left-container">
                         <div class="heading">
-                            <img src="/images/Logo.png" alt=""> </div>
+                            <img src="./images/Logo.png" alt=""> </div>
                         <div class="paragraph">
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ad ipsa velit. Nam,
@@ -659,12 +659,12 @@
                                 </div>
                                 <div class="list">
                                     <ul>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">FAQ</a></li>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">Contacts</a></li>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">Contacts</a></li>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">Terms</a></li>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">Privacy</a></li>
-                                        <li><img src="/images/greater.png" alt=""><a href="#">Testimonials</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">FAQ</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">Contacts</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">Contacts</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">Terms</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">Privacy</a></li>
+                                        <li><img src="./images/greater.png" alt=""><a href="#">Testimonials</a></li>
                                     </ul>
                                 </div>
 
@@ -677,10 +677,10 @@
                                         </div>
                                         <div class="list">
                                             <ul>
-                                                <li><img src="/images/greater.png" alt=""><a href="#">Blog</a></li>
-                                                <li><img src="/images/greater.png" alt=""><a href="#">Forum</a></li>
-                                                <li><img src="/images/greater.png" alt=""><a href="#">Support</a></li>
-                                                <li><img src="/images/greater.png" alt=""><a href="#">Newsletter</a>
+                                                <li><img src="./images/greater.png" alt=""><a href="#">Blog</a></li>
+                                                <li><img src="./images/greater.png" alt=""><a href="#">Forum</a></li>
+                                                <li><img src="./images/greater.png" alt=""><a href="#">Support</a></li>
+                                                <li><img src="./images/greater.png" alt=""><a href="#">Newsletter</a>
                                                 </li>
 
                                             </ul>
@@ -692,7 +692,7 @@
                                         </div>
                                         <div class="top clearfix">
                                             <div class="top-img">
-                                                <img src="images/noimage.png" alt="">
+                                                <img src="./images/noimage.png" alt="">
                                             </div>
                                             <div class="top-table">
                                                 <div class="heading"><a href="">Lorem ipsum dolor sit amet</a></div>
@@ -701,7 +701,7 @@
                                         </div>
                                         <div class="bottom clearfix">
                                             <div class="bottom-img">
-                                                <img src="/images/noimage.png" alt="">
+                                                <img src="./images/noimage.png" alt="">
                                             </div>
                                             <div class="bottom-table">
                                                 <div class="heading"><a href="">Lorem ipsum dolor sit amet</a></div>
@@ -726,16 +726,16 @@
                 <div class="footer-bottom-right">
                     <ul>
                         <li>
-                            <a href=""><img src="/images/fb.png" alt=""></a>
+                            <a href=""><img src="./images/fb.png" alt=""></a>
                         </li>
                         <li>
-                            <a href=""><img src="/images/googleplus.png" alt=""></a>
+                            <a href=""><img src="./images/googleplus.png" alt=""></a>
                         </li>
                         <li>
-                            <a href=""><img src="/images/twitter.png" alt=""></a>
+                            <a href=""><img src="./images/twitter.png" alt=""></a>
                         </li>
                         <li>
-                            <a href=""><img src="/images/subscription.png" alt=""></a>
+                            <a href=""><img src="./images/subscription.png" alt=""></a>
                         </li>
 
                     </ul>
