--- a/JSPROJECT/carLane/index.html
+++ b/JSPROJECT/carLane/index.html
@@ -13,9 +13,12 @@
   <div class="container" id="container">
     <div class="road-background" id="road-background"></div>
     <div class="gameOver" id="gameOver">Press enter to start game</div>
+    <!-- <button id="resetbutton">Restart</button> -->
+    <div class="highscore" id="highscore">Your HighScore :0</div>
+    <div class="score" id="score">Your Score :0</div>
   </div>
-  <div class="score" id="score"></div>
   <div class="speed" id="speed"></div>
+
 
   <script src="index.js"></script>
 </body>
