--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </th>
         </tr>
         <tr>
-            <th>JS Assignment 4 :Car Lane Game with Bullet implementation </th>
+            <th>JS Assignment 4.1 :Car Lane Game </th>
             <th>
                 <a
                     href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/carLane/">https://muksmhzrn.github.io/leapfrog/JSPROJECT/carLane/</a>
@@ -127,6 +127,17 @@
             <th>
                 <a
                     href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/carLane">https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/carLane</a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 4.2:Car Lane Game with Bullet implementation </th>
+            <th>
+                <a
+                    href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/carLaneBUllet/">https://muksmhzrn.github.io/leapfrog/JSPROJECT/carLaneBUllet/</a>
+            </th>
+            <th>
+                <a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/carLaneBUllet">https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/carLaneBUllet</a>
             </th>
         </tr>
         <tr>
@@ -139,7 +150,7 @@
             </th>
         </tr>
         <tr>
-            <th>JS Assignment 6 :Helix Animatio </th>
+            <th>JS Assignment 6 :Helix Animation </th>
             <th>
                 <a href="#"></a>
             </th>
