--- a/index.html
+++ b/index.html
@@ -143,10 +143,12 @@
         <tr>
             <th>JS Assignment 5 :Flappy Bird</th>
             <th>
-                <a href="#"></a>
+                <a
+                    href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/flappyBird/">https://muksmhzrn.github.io/leapfrog/JSPROJECT/flappyBird/</a>
             </th>
             <th>
-                <a href="#"></a>
+                <a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/flappyBird">https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/flappyBird</a>
             </th>
         </tr>
         <tr>
