--- a/JSPROJECT/helixAnimation/index.html
+++ b/JSPROJECT/helixAnimation/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <canvas id="mainWrapper" width="700" height="500"></canvas>
+  <canvas id="mainWrapper" style="background-color: black;"></canvas>
+  <script src=" index.js"></script>
+
 
 </body>
 
