--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
         <tr>
             <th>JS Assignment 6 :Helix Animation </th>
             <th>
-                <a href="#"></a>
+                <a
+                    href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/helixAnimation/">https://muksmhzrn.github.io/leapfrog/JSPROJECT/helixAnimation/</a>
             </th>
             <th>
-                <a href="#"></a>
+                <a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/helixAnimation">https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/helixAnimation</a>
             </th>
         </tr>
         <tr>
